Bug 167219 - Background color of notification about update looks bad on Windows Dark Theme
Summary: Background color of notification about update looks bad on Windows Dark Theme
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.4.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium trivial
Assignee: Heiko Tietze
URL:
Whiteboard: target:25.8.0.0.beta2 target:26.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-25 20:52 UTC by Siarhei Kuchuk
Modified: 2025-07-01 06:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
167219 - How notification area looks in Windows 11 dark theme (65.06 KB, image/jpeg)
2025-06-25 20:59 UTC, Siarhei Kuchuk
Details
Screenshot with patch applied (56.15 KB, image/png)
2025-06-30 08:21 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Siarhei Kuchuk 2025-06-25 20:52:12 UTC
Description:
Background color of notification about update looks bad on Windows Dark Theme.
It's light blue color.

Steps to Reproduce:
1. Release new update
2. Open Libre Writer


Actual Results:
Notification bar at the top of editor appears of light blue background. Light blue background looks awful on Windows 11 dark theme.

Expected Results:
Background of notification bar at the top of editor is of more harmonic color.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: ru-RU
Calc: CL threaded
Comment 1 Siarhei Kuchuk 2025-06-25 20:59:03 UTC
Created attachment 201475 [details]
167219 - How notification area looks in Windows 11 dark theme
Comment 2 V Stuart Foote 2025-06-26 10:49:13 UTC
That was a design decision, the notification bar takes on fixed color for Info, and Warnings. No reason to adjust => NAB
Comment 3 Heiko Tietze 2025-06-26 10:53:18 UTC
Wouldn't reject the request so quickly. While the light colors are good in normal scenarios we may add dark variants too. However, the colors are hard-coded and should stay non-customizable, IMO.
Comment 4 Siarhei Kuchuk 2025-06-29 09:58:23 UTC
While it was a design decision, as any decision it might not work in most scenarios, like black theme in Windows. Decisions are not sacred graal and there can be room for improvement.

Probably on light theme the color of notification bar about update looks good. But on other popular themes it is not.
Comment 5 Heiko Tietze 2025-06-30 08:21:27 UTC
Created attachment 201551 [details]
Screenshot with patch applied

Submitted a patch that just inverts the text/foreground and background colors when the background is dark.
Comment 6 V Stuart Foote 2025-06-30 11:04:39 UTC
(In reply to Heiko Tietze from comment #5)
> Created attachment 201551 [details]
> Screenshot with patch applied
> 
> Submitted a patch that just inverts the text/foreground and background
> colors when the background is dark.

+1
Comment 7 Commit Notification 2025-06-30 15:35:24 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/3b1cc18a0d1caf64104f9962011a4781b90b915a

Resolves tdf#167219 - Invert infobar colors on dark background

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-07-01 06:43:17 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f7c20a1c78dc5eed539a0c520b80270c7b843399

Resolves tdf#167219 - Invert infobar colors on dark background

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.