Resolves tdf#167219 - Invert infobar colors on dark background

Change-Id: I592509bcdb74ef5ac88a1cab51c2ffc978a19ecd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187169
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Jenkins